--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,6 +14,9 @@
 @import './components/specifications';
 @import './components/slider';
 @import './components/reviews';
+@import './components/orderSteps';
+@import './components/form';
+@import './components/hero-before-footer';
 @import './components/footer';
 
 
